Fix container alignment

--- a/src/css/extensions/custom.css
+++ b/src/css/extensions/custom.css
@@ -15,6 +15,19 @@
   margin-right: 1em;
 }
 
+.doc > h1.page:first-child {
+  margin-top: 3.5rem;
+}
+
+.article {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+}
+.footer {
+  margin-top: auto
+}
+
 @media screen and (min-width: 2400px) {
   html {
     font-size: var(--body-font-size--desktop);
